# Daily_Maximum_Temperature_Forecasting

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dataset/processed/: Southern_Vietnam_Weather_processed.csv
dataset/processed/splits/: dt_test.csv  dt_train.csv  dt_val.csv  enhanced_test.csv  enhanced_train.csv  enhanced_val.csv  fe_dt_test.csv  fe_dt_train.csv  fe_dt_val.csv  fe_test.csv  fe_train.csv  fe_val.csv  raw_test.csv  raw_train.csv  raw_val.csv
dataset/raw/: SVW_2015-2025.csv.gz.part_aa
notebooks/: 1_Preprocessing.ipynb  2_FeatureEngineering.ipynb  3_Modelling.ipynb  4_Hyperparameter_Optimization.ipynb
src/models/: rf_optimized_metadata_20251027_181558.json
src/utils/: visualization.py
