[project]
name = "deepthermo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "catboost>=1.2",
    "ipykernel>=7.1.0",
    "lightgbm>=4.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "optuna>=3.0",
    "pandas>=2.3.3",
    "prophet>=1.1",
    "scikit-learn>=1.3",
    "seaborn>=0.13.2",
    "shap>=0.42",
    "statsmodels>=0.13",
    "xgboost>=1.7",
]
